# AVSampleProjects

./: LICENSE  README.md
Audio/Windows/AmrFileStream/: AMRAudioStreamer.cpp  AmrFileStream.sln  AmrFileStream.vcxproj  AmrFileStream.vcxproj.filters
Audio/Windows/AmrFileStream/live555/: win32config
Audio/Windows/AudioRawCapturePortAudio/: UpgradeLog.XML  pasee.ncb  pasee.sln  pasee.suo.old
Audio/Windows/AudioRawCapturePortAudio/_UpgradeReport_Files/: Thumbs.db
Audio/Windows/AudioRawDataToAmrEncoded/: AmrConvert.cpp  AmrConvert.sdf  AmrConvert.sln  AmrConvert.vcxproj  AmrConvert.vcxproj.filters  ReadMe.txt  amrnb-enc.cpp  pcm16bit8000.raw  stdafx.cpp
Audio/Windows/CaptureAndAACEncode/: UpgradeLog.XML  yakcodec.sdf  yakcodec.sln  yakcodec.sln.old  yakcodec.suo.old
Audio/Windows/CaptureAndAMREncode/: yakcodec.ncb
Audio/Windows/PCMDataMixing/: ReadMe.txt  UpgradeLog.XML  pcm16raw1.pcm  pcm16raw2.pcm  pcmMix16Raw.pcm  stdafx.cpp  yakAudioMixer.cpp  yakmix.ncb  yakmix.sln  yakmix.suo.old  yakmix.vcproj  yakmix.vcxproj  yakmix.vcxproj.filters
Video/CameraToEncoder/: CMakeLists.txt
Video/CameraToEncoder/src/: cameratoencoder.cpp
Video/CameraToRawFrames/: CMakeLists.txt
Video/CameraToRawFrames/src/: cameratoframes.cpp
Video/ExtractFrames/: CMakeLists.txt
Video/ExtractFrames/src/: extract_frames.cpp
Video/RGBtoYUVtoCompress/: CMakeLists.txt
Video/RGBtoYUVtoCompress/src/: rgbtoyuv.cpp
Video/RTSPCameraStream/: CMakeLists.txt
Video/RTSPCameraStream/src/: rtspcamerastream.cpp
Video/RTSPFileStream/: CMakeLists.txt
Video/RTSPFileStream/src/: rtspfilestream.cpp
Video/SpeedX/: CMakeLists.txt
Video/SpeedX/src/: playback_speed.cpp
(+77 files in other folders)
